fixing blog and adding an article

--- a/nginx/blog.ruebenramirez.com.conf
+++ b/nginx/blog.ruebenramirez.com.conf
@@ -4,11 +4,10 @@ server {
 }
 
 server {
+	server_name blog.ruebenramirez.com;
 
-    server_name     blog.ruebenramirez.com
-
-	root /var/www;
-	index index.html index.htm;
+	root    /var/www;
+	index 	index.html index.htm;
 
 	location / {
 		# First attempt to serve request as file, then
