--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ static/images/first-big-exercise-win.png filter=lfs diff=lfs merge=lfs -text
 static/images/rueben-profile-pic.png filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-08-my-best-day-yet.jpeg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-12-walking-at-a-rest-area.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-08-17-6-miles.jpg filter=lfs diff=lfs merge=lfs -text
