--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ static/images/rueben-profile-pic.png filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-08-my-best-day-yet.jpeg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-12-walking-at-a-rest-area.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-17-6-miles.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-08-13-sugar-free-gum-triggers-blood-glucose-spike.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs merge=lfs -text
