--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ static/images/2023-08-12-walking-at-a-rest-area.jpg filter=lfs diff=lfs merge=lf
 static/images/2023-08-17-6-miles.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-13-sugar-free-gum-triggers-blood-glucose-spike.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-09-12-treadmill-3-hours.jpg filter=lfs diff=lfs merge=lfs -text
