--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ static/images/2023-08-17-6-miles.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-13-sugar-free-gum-triggers-blood-glucose-spike.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-09-12-treadmill-3-hours.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-09-23-5-mile-ruck.png filter=lfs diff=lfs merge=lfs -text
