--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ static/images/2023-08-13-sugar-free-gum-triggers-blood-glucose-spike.jpg filter=
 static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-09-12-treadmill-3-hours.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-09-23-5-mile-ruck.png filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-04-a-great-day-of-rucking.jpeg filter=lfs diff=lfs merge=lfs -text
