--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,7 @@ static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs mer
 static/images/2023-09-12-treadmill-3-hours.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-09-23-5-mile-ruck.png filter=lfs diff=lfs merge=lfs -text
 static/images/2023-10-04-a-great-day-of-rucking.jpeg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-06-source-hydration-bladder.png filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-07-brooks-glycerin-20.png filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-06--20-pound-ruck-plate.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-07-recycled-firefighter-ruck.jpg filter=lfs diff=lfs merge=lfs -text
