--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,5 @@ static/images/2023-10-06--20-pound-ruck-plate.jpg filter=lfs diff=lfs merge=lfs 
 static/images/2023-10-07-recycled-firefighter-ruck.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-10-07-withings-smart-scale.jpg filter=lfs diff=lfs merge=lfs -text
 static/images/2023-11-04_20-15-bone-conducting-headphones.png filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-17-liver-biopsy-tissue.jpg filter=lfs diff=lfs merge=lfs -text
+static/images/2023-10-7-before-and-after.jpg filter=lfs diff=lfs merge=lfs -text
