update blog url to https://blog.rueb.dev

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://blog.ruebenramirez.com/'
+baseURL = 'https://blog.rueb.dev/'
 languageCode = 'en-us'
 title = 'burner of poptarts; breaker of things'
 theme = 'devise'
