--- a/.gitattributes
+++ b/.gitattributes
@@ -1,21 +1,3 @@
-static/images/first-big-exercise-win.png filter=lfs diff=lfs merge=lfs -text
-static/images/rueben-profile-pic.png filter=lfs diff=lfs merge=lfs -text
-static/images/2023-08-08-my-best-day-yet.jpeg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-08-12-walking-at-a-rest-area.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-08-17-6-miles.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-08-13-sugar-free-gum-triggers-blood-glucose-spike.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-08-17-blood-glucose-averages-plot.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-09-12-treadmill-3-hours.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-09-23-5-mile-ruck.png filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-04-a-great-day-of-rucking.jpeg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-06-source-hydration-bladder.png filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-07-brooks-glycerin-20.png filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-06--20-pound-ruck-plate.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-07-recycled-firefighter-ruck.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-07-withings-smart-scale.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-11-04_20-15-bone-conducting-headphones.png filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-17-liver-biopsy-tissue.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2023-10-7-before-and-after.jpg filter=lfs diff=lfs merge=lfs -text
-static/images/2024-10-12-benchmark-5k-completion-stats.jpeg filter=lfs diff=lfs merge=lfs -text
-static/images/2024-10-12-benchmark-5k-dead-picture.jpeg filter=lfs diff=lfs merge=lfs -text
-static/images/2024-10-12-benchmark-5k-walk-run-breakdown.jpeg filter=lfs diff=lfs merge=lfs -text
+static/images/*.png filter=lfs diff=lfs merge=lfs -text
+static/images/*.jpeg filter=lfs diff=lfs merge=lfs -text
+static/images/*.jpg filter=lfs diff=lfs merge=lfs -text
